# final_

./: CMakeLists.txt  CMakePresets.json  main.cpp  t.cpp  test.cpp
GKD-Software-2025-Test-main/: readme.md
GKD-Software-2025-Test-main/mnist-fc/: fc1.bias  fc1.weight  fc2.bias  fc2.weight  meta.json
GKD-Software-2025-Test-main/mnist-fc-plus/: fc1.bias  fc2.bias  fc2.weight  meta.json
GKD-Software-2025-Test-main/parts/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md
part1/: client.cpp  client_use.cpp  main.cpp  part1.cpp  part1.h
part1/include/: part1.h
part1/src/: part1.cpp
socket_test/: client.cpp  server.cpp
